@@ -18,106 +18,46 @@ public class PracticeService {
 	@Autowired
 	ServletContext application;
 	
-	public String content(String content, String title){
-//		String uuid = UUID.randomUUID().toString().substring(0, 10);
+	public List content(String content, String title){
+		String uuid = UUID.randomUUID().toString().substring(0, 10);
 		String dir = application.getRealPath("/files");
-		String s;
 		File f = new File(dir, title+".java");
+		String line = "";
+		List<String> list = new Vector<>();
 		try{
 			FileOutputStream fos = new FileOutputStream(f);
 			byte[] ar = content.getBytes();
 			for(int i=0; i<ar.length; i++){
 				fos.write(ar[i]);
 			}
-//			FileInputStream fis = new FileInputStream(f);
 			System.out.println("파일생성완료");
-			System.out.println(title);
-			System.out.println(dir);
 			
-			Process proc = new ProcessBuilder("cmd", "cd ", dir).start();
-			Process process = Runtime.getRuntime().exec("cmd");
-			OutputStream os = process.getOutputStream();
-			byte[] javac = new String("java c"+dir+"\\"+title+".java").getBytes();
-			for(byte b : javac){
-				os.write(b);
+			ProcessBuilder builder = new ProcessBuilder("cmd", "/c", "javac", title+".java");
+			System.out.println("빌더생성");
+			builder.directory(new File(dir));
+			System.out.println("빌더 경로 설정");
+			Process process  = builder.start();
+			System.out.println("프로세스 실행");
+			process.waitFor();
+			BufferedReader error = new BufferedReader(new InputStreamReader(process.getErrorStream()));
+			if(error.readLine() != null){
+				while((line = error.readLine()) != null){
+					list.add(line);
+				}
+				return list;
+			} else {
+				builder = new ProcessBuilder("cmd", "/c", "java", title);
+				builder.directory(new File(dir));
+				process = builder.start();
+				BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+				while((line = reader.readLine()) != null){
+					list.add(line);
+				}
+				return list;
 			}
-			BufferedReader br = new BufferedReader(new InputStreamReader(process.getInputStream()));
-			while(br.readLine()!=null){
-				System.out.println("a");
-				System.out.println(br.readLine());
-				System.out.println("b");
-			}
-			System.out.println(process.exitValue());
-			System.out.println("======");
-//			System.out.println("cmd 경로이동");
-//			BufferedReader br   = new BufferedReader(new InputStreamReader(proc.getInputStream()));
-//			while(br.readLine() != null){
-//				s = br.readLine();
-//				System.out.println(s);
-//			}
-//			System.out.println("======");
-//			proc = new ProcessBuilder("cmd", "javac ", title, ".java").start();
-//			System.out.println("cmd 컴파일완료");
-//			proc = new ProcessBuilder("cmd", "java ", title).start();
-//			System.out.println("cmd 실행완료");
-//			System.out.println(br);
-//			System.out.println("======");
-//			System.out.println(proc.exitValue());
 		} catch(Exception e){
 			e.printStackTrace();
 			return null;
 		}
-		return content;
 	}
-	/*public String content(String content, String title){
-		String dir = application.getRealPath("/files");
-		File f = new File(dir, title+".java");
-		try{
-			FileOutputStream fos = new FileOutputStream(f);
-			byte[] ar = content.getBytes();
-			for(int i=0; i<ar.length; i++){
-				fos.write(ar[i]);
-			}
-//			FileInputStream fis = new FileInputStream(f);
-			System.out.println("파일생성완료");
-			System.out.println(title);
-			System.out.println(dir);
-		} catch(Exception e){
-			e.printStackTrace();
-		}
-		DefaultExecutor executor = new DefaultExecutor();
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
-        PumpStreamHandler streamHandler = new PumpStreamHandler(baos);
-        executor.setStreamHandler(streamHandler);
-        CommandLine commandLine = CommandLine.parse("javac");
-
-        // 파라미터가 필요할경우
-
-        commandLine.addArguments(dir+"\\"+title+".java");
-
-        try {
-        	System.out.println(commandLine);
-            int exitCode = executor.execute(commandLine);
-            System.out.println(new String(baos.toByteArray()));
-            System.out.println("exit " + exitCode);
-            
-//            String cd = "cd "+dir;
-            commandLine = CommandLine.parse("cd");
-            commandLine.addArgument(dir);
-            System.out.println(commandLine);
-            exitCode = executor.execute(commandLine);
-            System.out.println("exit2 "+exitCode);
-            
-            commandLine = CommandLine.parse("java");
-            commandLine.addArgument(title);
-            System.out.println(commandLine);
-            exitCode = executor.execute(commandLine);
-            System.out.println("exit3 "+exitCode);
-        } catch (ExecuteException e) {
-            e.printStackTrace();
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-		return content;
-	}*/
 }
